--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,29 @@
-cmake_minimum_required(VERSION 3.15)
-project(otus_hw7)
+cmake_minimum_required(VERSION 3.2)
 
-set(CMAKE_CXX_STANDARD 17)
+if($ENV{TRAVIS_BUILD_NUMBER})
+    project(bulk VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
+else()
+    project(bulk VERSION 0.0.0)
+endif()
 
-add_executable(otus_hw7 main.cpp)
+configure_file(version.h.in ${PROJECT_SOURCE_DIR}/version.h)
+
+add_executable(bulk main.cpp)
+
+set_target_properties(bulk PROPERTIES
+        CXX_STANDARD 17
+        CXX_STANDARD_REQUIRED ON
+        COMPILE_OPTIONS "-Wpedantic;-Wall;-Wextra"
+        )
+
+install(TARGETS bulk RUNTIME DESTINATION bin)
+
+set(CPACK_GENERATOR DEB)
+
+set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
+set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+
+set(CPACK_PACKAGE_CONTACT kuskov.stanislav@gmail.com)
+
+include(CPack)
