CI without dpxy

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,38 +1,53 @@
+#dist: xenial
+#language: cpp
+#compiler: clang
+#
+#before_install:
+#  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+#  - sudo apt-get update -qq
+#
+#install:
+#  - sudo apt-get install g++-8 cmake doxygen graphviz -y
+#  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 60
+#
+#before_script:
+#  - ls
+#  - gcc --version
+#  - g++ --version
+#  - cmake --version
+#
+#script:
+#  - doxygen Doxyfile
+#  - cmake .
+#  - cmake --build .
+#  - cmake --build . --target package
+#
+#deploy:
+#  - provider: script
+#    skip_cleanup: true
+#    script:
+#      - curl -f -T bulk-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ustanislavkuskov:$BINTRAY_API_KEY "https://api.bintray.com/content/stanislavkuskov/otus-cpp/homework/$TRAVIS_BUILD_NUMBER/bulk-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=xenial;deb_component=main;deb_architecture=amd64;publish=1"
+#    on:
+#      branch: master
+#
+#  - provider: pages
+#    skip_cleanup: true
+#    local-dir: $TRAVIS_BUILD_DIR/html
+#    github-token: $GITHUB_TOKEN
+#    on:
+#      branch: master
+
 dist: xenial
 language: cpp
 compiler: clang
 
-before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update -qq
-
-install:
-  - sudo apt-get install g++-8 cmake doxygen graphviz -y
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-8 60
-
-before_script:
-  - ls
-  - gcc --version
-  - g++ --version
-  - cmake --version
-
 script:
-  - doxygen Doxyfile
   - cmake .
   - cmake --build .
   - cmake --build . --target package
 
 deploy:
-  - provider: script
-    skip_cleanup: true
-    script:
-      - curl -f -T bulk-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ustanislavkuskov:$BINTRAY_API_KEY "https://api.bintray.com/content/stanislavkuskov/otus-cpp/homework/$TRAVIS_BUILD_NUMBER/bulk-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=xenial;deb_component=main;deb_architecture=amd64;publish=1"
-    on:
-      branch: master
-
-  - provider: pages
-    skip_cleanup: true
-    local-dir: $TRAVIS_BUILD_DIR/html
-    github-token: $GITHUB_TOKEN
-    on:
-      branch: master
+  provider: script
+  skip_cleanup: true
+  script:
+    - curl -f -T bulk-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -ustanislavkuskov:$BINTRAY_API_KEY "https://api.bintray.com/content/stanislavkuskov/otus-cpp/homework/$TRAVIS_BUILD_NUMBER/bulk-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=xenial;deb_component=main;deb_architecture=amd64;publish=1"
